--- a/index.html
+++ b/index.html
@@ -156,11 +156,15 @@
               </div>
               <div class="col">
                 <h3>Tape Ketan Bakung | Cakreni</h3>
-                <p>
+                 <p>
+                  Di Buat Oleh:
+                  <br>
+                  <h5>Saeful Bakri 41180144 TI-S2-2018</h5>pada tanggal 14 November 2019 Design ini Buat
+                  untuk memenuhi UAS ganjil 2019.
+                </p>
                   "Ibu Cakreni adalah Pemilik Tape Ketan Bakung"
                   <br>
                   Bakung kidul, Kec. Jamblang, Cirebon, Jawa Barat 45156
-                </p>
               </div>
           </div>
       </div>
