--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
                  <p>
                   Di Buat Oleh:
                   <br>
-                  <h5>Saeful Bakri 41180144 TI-S2-2018</h5>pada tanggal 14 November 2019 Design ini Buat
-                  untuk memenuhi UAS ganjil 2019.
+                  <h5>Saeful Bakri 41180144 TI-S2-2018</h5>pada tanggal 14 November 2019 Design ini
+                  untuk memenuhi UAS semester ganjil 2019.
                 </p>
                   "Ibu Cakreni adalah Pemilik Tape Ketan Bakung"
                   <br>
