--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 
     <div class="row Footer footer-light bg-light">
       <div class="col text-center" >
-      <p>Saeful Bakri | Tugas Web Design. </p>
+      <p>Web Design. | &copy 2019</p>
       </div>
     </div>
     
